--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 							</div>
 						</div>
 						<div class="header__image">
-							<picture><source srcset="img/header/image.webp" type="image/webp"><img src="img/header/image.png" alt="header image" width="592" height="547"></picture>
+							<picture><source srcset="img/header/image.png" type="image/webp"><img src="img/header/image.png" alt="header image" width="592" height="547"></picture>
 						</div>
 					</div>
 				</div>
