--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<div class="header__top">
 
 						<a class="header__logo logo" href="#header">
-							<img class="logo__img" src="img/logo.svg" alt="logotype" width="50" height="50">
+							<img class="logo__img" src="img/Logo.png" alt="logotype" width="50" height="50">
 							<span class="logo__text">CatShiba <span class="logo__red">Inu</span></span>
 						</a>
 						<div class="header__menu-wrapper">
@@ -250,7 +250,7 @@
 					<div class="play__items">
 						<div class="play__item play__item_big">
 							<div class="play__img">
-								<picture><source srcset="img/play/1.webp" type="image/webp"><img src="img/play/1.jpg" alt="Play Image" width="649" height="288"></picture>
+								<picture><source srcset="img/play/1.png" type="image/webp"><img src="img/play/1.jpg" alt="Play Image" width="649" height="288"></picture>
 							</div>
 							<div class="play__info">
 								<div class="play__heading">Game plot and goal</div>
@@ -562,7 +562,7 @@
 							</div>
 						</div>
 						<div class="token__image">
-							<picture><source srcset="img/token/1.webp" type="image/webp"><img src="img/token/1.png" alt="Token image" width="552" height="552"></picture>
+							<picture><source srcset="img/token/1.png" type="image/webp"><img src="img/token/1.png" alt="Token image" width="552" height="552"></picture>
 						</div>
 						<div class="token__item token__item_right">
 							<div class="token__info">
@@ -735,7 +735,7 @@
 						</li>
 					</ul>
 					<div class="community__image">
-						<picture><source srcset="img/community/shiba.webp" type="image/webp"><img src="img/community/shiba.png" alt="Shiba image" width="256" height="238"></picture>
+						<picture><source srcset="img/community/shiba.png" type="image/webp"><img src="img/community/shiba.png" alt="Shiba image" width="256" height="238"></picture>
 					</div>
 					<div class="community__address">
 						<span>CatShiba Inu’s Contract address:</span>
