--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
 							</div>
 						</div>
 						<div class="token__image">
-							<picture><source srcset="img/token/1.png" type="image/webp"><img src="img/token/1.png" alt="Token image" width="552" height="552"></picture>
+							<picture><source srcset="img/token/Token.png" type="image/webp"><img src="img/token/1.png" alt="Token image" width="552" height="552"></picture>
 						</div>
 						<div class="token__item token__item_right">
 							<div class="token__info">
