--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="preload">
 			<div class="preload__wrapper">
 				<div class="preload__image">
-					<picture><source srcset="img/preload/bg.webp" type="image/webp"><img class="_lazy" src="img/preload/bg.png" alt="preload shiba image" width="95" height="100"></picture>
+					<picture><source srcset="img/preload/bg.png" type="image/webp"><img class="_lazy" src="img/preload/bg.png" alt="preload shiba image" width="95" height="100"></picture>
 				</div>
 				<div class="preload__text">CatShiba<span>Inu</span></div>
 			</div>
@@ -34,7 +34,7 @@
 						No Content =) Sorry.
 					</div>
 					<div class="popup__image">
-						<picture><source srcset="img/preload/bg.webp" type="image/webp"><img src="img/preload/bg.png" alt="Shiba image" width="95" height="100"></picture>
+						<picture><source srcset="img/preload/bg.png" type="image/webp"><img src="img/preload/bg.png" alt="Shiba image" width="95" height="100"></picture>
 					</div>
 				</div>
 			</div>
