--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 						<p>Yes you read that right, CatShib Inu officially enters the game to conquer the world 🌎</p>
 					</div>
 					<a class="shiba__link btn" data-popup="#popup" href="#">Let’s find out more</a>
-					<!-- <picture><source srcset="img/shiba/bg.webp" type="image/webp"><img src="img/shiba/bg.png" alt="Shiba image" width="950" height="950"></picture> -->
+					<!-- <picture><source srcset="img/shiba/bg.png" type="image/webp"><img src="img/shiba/bg.png" alt="Shiba image" width="950" height="950"></picture> -->
 
 				</div>
 			</div>
