--- a/index.html
+++ b/index.html
@@ -131,24 +131,24 @@
 
 			<div class="run wow animate__fadeIn" id="run">
 				<div class="run__wrapper">
-					<div class="run__item"><span>WARNING: this is not a meme coin</span></div>
-					<div class="run__item"><span>WARNING: this is not a meme coin</span></div>
-					<div class="run__item"><span>WARNING: this is not a meme coin</span></div>
-					<div class="run__item"><span>WARNING: this is not a meme coin</span></div>
-					<div class="run__item"><span>WARNING: this is not a meme coin</span></div>
-					<div class="run__item"><span>WARNING: this is not a meme coin</span></div>
-					<div class="run__item"><span>WARNING: this is not a meme coin</span></div>
-					<div class="run__item"><span>WARNING: this is not a meme coin</span></div>
-					<div class="run__item"><span>WARNING: this is not a meme coin</span></div>
-					<div class="run__item"><span>WARNING: this is not a meme coin</span></div>
-					<div class="run__item"><span>WARNING: this is not a meme coin</span></div>
-					<div class="run__item"><span>WARNING: this is not a meme coin</span></div>
-					<div class="run__item"><span>WARNING: this is not a meme coin</span></div>
-					<div class="run__item"><span>WARNING: this is not a meme coin</span></div>
-					<div class="run__item"><span>WARNING: this is not a meme coin</span></div>
-					<div class="run__item"><span>WARNING: this is not a meme coin</span></div>
-					<div class="run__item"><span>WARNING: this is not a meme coin</span></div>
-					<div class="run__item"><span>WARNING: this is not a meme coin</span></div>
+					<div class="run__item"><span>WARNING: THIS IS A 1BIL MC PROJECT SELL AT YOUR OWN RISK</span></div>
+					<div class="run__item"><span>WARNING: THIS IS A 1BIL MC PROJECT SELL AT YOUR OWN RISK</span></div>
+					<div class="run__item"><span>WARNING: THIS IS A 1BIL MC PROJECT SELL AT YOUR OWN RISK</span></div>
+					<div class="run__item"><span>WARNING: THIS IS A 1BIL MC PROJECT SELL AT YOUR OWN RISK</span></div>
+					<div class="run__item"><span>WARNING: THIS IS A 1BIL MC PROJECT SELL AT YOUR OWN RISK</span></div>
+					<div class="run__item"><span>WARNING: THIS IS A 1BIL MC PROJECT SELL AT YOUR OWN RISK</span></div>
+					<div class="run__item"><span>WARNING: THIS IS A 1BIL MC PROJECT SELL AT YOUR OWN RISK</span></div>
+					<div class="run__item"><span>WARNING: THIS IS A 1BIL MC PROJECT SELL AT YOUR OWN RISK</span></div>
+					<div class="run__item"><span>WARNING: THIS IS A 1BIL MC PROJECT SELL AT YOUR OWN RISK</span></div>
+					<div class="run__item"><span>WARNING: THIS IS A 1BIL MC PROJECT SELL AT YOUR OWN RISK</span></div>
+					<div class="run__item"><span>WARNING: THIS IS A 1BIL MC PROJECT SELL AT YOUR OWN RISK</span></div>
+					<div class="run__item"><span>WARNING: THIS IS A 1BIL MC PROJECT SELL AT YOUR OWN RISK</span></div>
+					<div class="run__item"><span>WARNING: THIS IS A 1BIL MC PROJECT SELL AT YOUR OWN RISK</span></div>
+					<div class="run__item"><span>WARNING: THIS IS A 1BIL MC PROJECT SELL AT YOUR OWN RISK</span></div>
+					<div class="run__item"><span>WARNING: THIS IS A 1BIL MC PROJECT SELL AT YOUR OWN RISK</span></div>
+					<div class="run__item"><span>WARNING: THIS IS A 1BIL MC PROJECT SELL AT YOUR OWN RISK</span></div>
+					<div class="run__item"><span>WARNING: THIS IS A 1BIL MC PROJECT SELL AT YOUR OWN RISK</span></div>
+					<div class="run__item"><span>WARNING: THIS IS A 1BIL MC PROJECT SELL AT YOUR OWN RISK</span></div>
 				</div>
 			</div>
 
