--- a/index.html
+++ b/index.html
@@ -612,14 +612,18 @@
 								</div>
 							</button>
 							<div class="spollers__body">
-								Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro facilis fugiat distinctio eos alias
-								suscipit autem consectetur fugit. Necessitatibus totam doloribus quibusdam at reprehenderit
-								exercitationem, unde labore minima quidem. Eaque voluptatum atque sint. Rerum nemo eligendi repudiandae
-								quisquam, corrupti culpa dolore autem placeat, incidunt non harum reprehenderit esse nisi eos modi
-								exercitationem a consequuntur voluptate ea veritatis officia perferendis qui quia quis. Dolorum
-								recusandae iusto nihil in quibusdam fuga, provident hic facere sunt praesentium sed laudantium totam
-								beatae, repellendus natus quidem odio nostrum quis cum eligendi voluptas, voluptatem eum? Assumenda quae
-								totam optio? Rem ad molestias modi velit atque. Consequuntur?
+								As of now, CatShib Inu tokens and NFTs are not listed on major platforms like CoinMarketCap, OpenSea, or major decentralized exchanges, which may mean the project is either very new or not widely adopted yet.
+
+If you are looking for the token:
+Search for the official smart contract address (on Etherscan for Ethereum or BscScan for Binance Smart Chain).
+
+Verify authenticity: Make sure the token has verified source code, community support, and ideally an audit.
+
+Buy via DEX: Use Uniswap (for Ethereum) or PancakeSwap (for BSC) to trade ETH or BNB for the token.
+
+Import the token into your wallet (MetaMask, Trust Wallet, Rabby Wallet) using the smart contract address.
+
+⚠️ Be cautious! Many new meme tokens can be scams (rug pulls, honeypots). Always do your research and invest only what you can afford to lose.
 							</div>
 						</div>
 						<div class="spollers__item">
