--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
 					<div data-spollers class="questions__spollers spollers">
 						<div class="spollers__item">
 							<button type="button" data-spoller class="spollers__title">
-								<span>Where can I buy tokens and NFTs of CatShib Inu?</span>
+								<span> What is CatShib Inu?</span>
 								<div class="questions__arrow">
 									<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M18 9L12 15L6 9" stroke="#fff" />
@@ -612,23 +612,13 @@
 								</div>
 							</button>
 							<div class="spollers__body">
-								As of now, CatShib Inu tokens and NFTs are not listed on major platforms like CoinMarketCap, OpenSea, or major decentralized exchanges, which may mean the project is either very new or not widely adopted yet.
-
-If you are looking for the token:
-Search for the official smart contract address (on Etherscan for Ethereum or BscScan for Binance Smart Chain).
-
-Verify authenticity: Make sure the token has verified source code, community support, and ideally an audit.
-
-Buy via DEX: Use Uniswap (for Ethereum) or PancakeSwap (for BSC) to trade ETH or BNB for the token.
-
-Import the token into your wallet (MetaMask, Trust Wallet, Rabby Wallet) using the smart contract address.
-
-⚠️ Be cautious! Many new meme tokens can be scams (rug pulls, honeypots). Always do your research and invest only what you can afford to lose.
+								
+CatShib Inu is a meme-inspired cryptocurrency token that combines the playful charm of a cat and the popularity of Shiba Inu. It aims to build a strong community and utility through DeFi, NFTs, and future staking or GameFi features.
 							</div>
 						</div>
 						<div class="spollers__item">
 							<button type="button" data-spoller class="spollers__title">
-								<span>Where can I buy tokens and NFTs of CatShib Inu?</span>
+								<span>On which blockchain is CatShib Inu built?</span>
 								<div class="questions__arrow">
 									<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M18 9L12 15L6 9" stroke="#fff" />
@@ -636,19 +626,12 @@ Import the token into your wallet (MetaMask, Trust Wallet, Rabby Wallet) using t
 								</div>
 							</button>
 							<div class="spollers__body">
-								Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro facilis fugiat distinctio eos alias
-								suscipit autem consectetur fugit. Necessitatibus totam doloribus quibusdam at reprehenderit
-								exercitationem, unde labore minima quidem. Eaque voluptatum atque sint. Rerum nemo eligendi repudiandae
-								quisquam, corrupti culpa dolore autem placeat, incidunt non harum reprehenderit esse nisi eos modi
-								exercitationem a consequuntur voluptate ea veritatis officia perferendis qui quia quis. Dolorum
-								recusandae iusto nihil in quibusdam fuga, provident hic facere sunt praesentium sed laudantium totam
-								beatae, repellendus natus quidem odio nostrum quis cum eligendi voluptas, voluptatem eum? Assumenda quae
-								totam optio? Rem ad molestias modi velit atque. Consequuntur?
+								CatShib Inu is typically built on BASE network. Always verify the official smart contract address before purchasing.
 							</div>
 						</div>
 						<div class="spollers__item">
 							<button type="button" data-spoller class="spollers__title">
-								<span>Where can I buy tokens and NFTs of CatShib Inu?</span>
+								<span>How can I buy CatShib Inu tokens?</span>
 								<div class="questions__arrow">
 									<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M18 9L12 15L6 9" stroke="#fff" />
@@ -656,19 +639,12 @@ Import the token into your wallet (MetaMask, Trust Wallet, Rabby Wallet) using t
 								</div>
 							</button>
 							<div class="spollers__body">
-								Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro facilis fugiat distinctio eos alias
-								suscipit autem consectetur fugit. Necessitatibus totam doloribus quibusdam at reprehenderit
-								exercitationem, unde labore minima quidem. Eaque voluptatum atque sint. Rerum nemo eligendi repudiandae
-								quisquam, corrupti culpa dolore autem placeat, incidunt non harum reprehenderit esse nisi eos modi
-								exercitationem a consequuntur voluptate ea veritatis officia perferendis qui quia quis. Dolorum
-								recusandae iusto nihil in quibusdam fuga, provident hic facere sunt praesentium sed laudantium totam
-								beatae, repellendus natus quidem odio nostrum quis cum eligendi voluptas, voluptatem eum? Assumenda quae
-								totam optio? Rem ad molestias modi velit atque. Consequuntur?
+								You can buy CatShib Inu through decentralized exchanges (DEX) Uniswap (Base) by swapping ETH using the correct contract address.
 							</div>
 						</div>
 						<div class="spollers__item">
 							<button type="button" data-spoller class="spollers__title">
-								<span>Where can I buy tokens and NFTs of CatShib Inu?</span>
+								<span>Is CatShib Inu a safe investment?</span>
 								<div class="questions__arrow">
 									<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M18 9L12 15L6 9" stroke="#fff" />
@@ -676,14 +652,7 @@ Import the token into your wallet (MetaMask, Trust Wallet, Rabby Wallet) using t
 								</div>
 							</button>
 							<div class="spollers__body">
-								Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro facilis fugiat distinctio eos alias
-								suscipit autem consectetur fugit. Necessitatibus totam doloribus quibusdam at reprehenderit
-								exercitationem, unde labore minima quidem. Eaque voluptatum atque sint. Rerum nemo eligendi repudiandae
-								quisquam, corrupti culpa dolore autem placeat, incidunt non harum reprehenderit esse nisi eos modi
-								exercitationem a consequuntur voluptate ea veritatis officia perferendis qui quia quis. Dolorum
-								recusandae iusto nihil in quibusdam fuga, provident hic facere sunt praesentium sed laudantium totam
-								beatae, repellendus natus quidem odio nostrum quis cum eligendi voluptas, voluptatem eum? Assumenda quae
-								totam optio? Rem ad molestias modi velit atque. Consequuntur?
+								As with any new meme token, CatShib Inu carries high risk. Make sure to verify the project, team, audits, and community before investing. Only invest what you can afford to lose.
 							</div>
 						</div>
 					</div>
