--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 						</div>
 					</div>
 					<div class="shiba__text">
-						<p>Yes you read that right, CatShib Inu officially enters the game to conquer the world 🌎</p>
+						<p>Yes you read that right, CatShiba Inu officially enters the game to conquer the world 🌎</p>
 					</div>
 					<a class="shiba__link btn" data-popup="#popup" href="#">Let’s find out more</a>
 					<!-- <picture><source srcset="img/shiba/Bg.png" type="image/webp"><img src="img/shiba/Bg.png" alt="Shiba image" width="950" height="950"></picture> -->
@@ -324,7 +324,7 @@
 									<div class="why__text">
 										<p>
 											Shiba inu has invaded the market with an infinity of other meme coins that collect thousands of
-											BNB and after the launch they make mind-boggling numbers!
+											ETH and after the launch they make mind-boggling numbers!
 										</p>
 									</div>
 								</div>
@@ -385,7 +385,7 @@
 								<ul class="roadmap__list">
 									<li class="roadmap__point">• Listing on coinmarketcap and coingecko</li>
 									<li class="roadmap__point">• Early beta game</li>
-									<li class="roadmap__point">• Promotion cooperation with big celebrities</li>
+									<li class="roadmap__point">• Promotion cooperation with some influencers</li>
 									<li class="roadmap__point">• NFT & Game community build-up</li>
 									<li class="roadmap__point">• NFT collaborations and launch</li>
 								</ul>
@@ -397,7 +397,7 @@
 								<div class="roadmap__date">Q1-Q2 2026</div>
 								<ul class="roadmap__list">
 									<li class="roadmap__point">• Launch of new website</li>
-									<li class="roadmap__point">• Centralized exchange listening</li>
+									<li class="roadmap__point">• Centralized exchange listing</li>
 									<li class="roadmap__point">• Launch of Catshiba inu single player</li>
 									<li class="roadmap__point">• Creation of NFT marketplace</li>
 									<li class="roadmap__point">• First teaser of Catshiba inu World Metaverse multiplayer</li>
