--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 									<div class="team__img">
 										<picture><source srcset="img/team/2.webp" type="image/webp"><img src="img/team/2.jpg" alt="Team Member Photo" width="350" height="377"></picture>
 									</div>
-									<div class="team__name">Alex Shiba</div>
+									<div class="team__name">Alex </div>
 									<div class="team__prof">Founder and Blockchain expert</div>
 								</div>
 
