--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
 
 								<div class="team__card">
 									<div class="team__img">
-										<picture><source srcset="img/team/1.webp" type="image/webp"><img src="img/team/1.jpg" alt="Team Member Photo" width="350" height="377"></picture>
+										<picture><source srcset="img/team/8.png" type="image/webp"><img src="img/team/8.png" alt="Team Member Photo" width="350" height="377"></picture>
 									</div>
 									<div class="team__name">Famz</div>
 									<div class="team__prof">Founder and CEO</div>
@@ -439,7 +439,7 @@
 
 								<div class="team__card">
 									<div class="team__img">
-										<picture><source srcset="img/team/2.webp" type="image/webp"><img src="img/team/2.jpg" alt="Team Member Photo" width="350" height="377"></picture>
+										<picture><source srcset="img/team/1.png" type="image/webp"><img src="img/team/1.png" alt="Team Member Photo" width="350" height="377"></picture>
 									</div>
 									<div class="team__name">Alex </div>
 									<div class="team__prof">Founder and Blockchain expert</div>
@@ -447,7 +447,7 @@
 
 								<div class="team__card">
 									<div class="team__img">
-										<picture><source srcset="img/team/3.webp" type="image/webp"><img src="img/team/3.jpg" alt="Team Member Photo" width="350" height="377"></picture>
+										<picture><source srcset="img/team/6.png" type="image/webp"><img src="img/team/6.png" alt="Team Member Photo" width="350" height="377"></picture>
 									</div>
 									<div class="team__name">Rericht</div>
 									<div class="team__prof">Web3 Expert</div>
@@ -455,7 +455,7 @@
 
 								<div class="team__card">
 									<div class="team__img">
-										<picture><source srcset="img/team/4.webp" type="image/webp"><img src="img/team/4.jpg" alt="Team Member Photo" width="350" height="377"></picture>
+										<picture><source srcset="img/team/2.png" type="image/webp"><img src="img/team/2.png" alt="Team Member Photo" width="350" height="377"></picture>
 									</div>
 									<div class="team__name">Venture</div>
 									<div class="team__prof">Marketing and Funnels</div>
@@ -466,15 +466,15 @@
 
 								<div class="team__card">
 									<div class="team__img">
-										<picture><source srcset="img/team/1.webp" type="image/webp"><img src="img/team/1.jpg" alt="Team Member Photo" width="350" height="377"></picture>
+										<picture><source srcset="img/team/7.png" type="image/webp"><img src="img/team/7.png" alt="Team Member Photo" width="350" height="377"></picture>
 									</div>
-									<div class="team__name">Maul Lana</div>
+									<div class="team__name">Maul</div>
 									<div class="team__prof">Marketing and Funnels</div>
 								</div>
 
 								<div class="team__card">
 									<div class="team__img">
-										<picture><source srcset="img/team/2.webp" type="image/webp"><img src="img/team/2.jpg" alt="Team Member Photo" width="350" height="377"></picture>
+										<picture><source srcset="img/team/4.png" type="image/webp"><img src="img/team/4.png" alt="Team Member Photo" width="350" height="377"></picture>
 									</div>
 									<div class="team__name">Rushfie</div>
 									<div class="team__prof">Marketing and Funnels</div>
@@ -482,15 +482,15 @@
 
 								<div class="team__card">
 									<div class="team__img">
-										<picture><source srcset="img/team/3.webp" type="image/webp"><img src="img/team/3.jpg" alt="Team Member Photo" width="350" height="377"></picture>
+										<picture><source srcset="img/team/5.png" type="image/webp"><img src="img/team/5.png" alt="Team Member Photo" width="350" height="377"></picture>
 									</div>
-									<div class="team__name">Diem Mash</div>
+									<div class="team__name">Nick</div>
 									<div class="team__prof">Marketing and Funnels</div>
 								</div>
 
 								<div class="team__card">
 									<div class="team__img">
-										<picture><source srcset="img/team/4.webp" type="image/webp"><img src="img/team/4.jpg" alt="Team Member Photo" width="350" height="377"></picture>
+										<picture><source srcset="img/team/3.png" type="image/webp"><img src="img/team/3.png" alt="Team Member Photo" width="350" height="377"></picture>
 									</div>
 									<div class="team__name">Kevin</div>
 									<div class="team__prof">Marketing and Funnels</div>
