--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
 							<div class="how-it-works__img">
 								<img src="img/how-it-works/1.svg" alt="how-it-works image" width="35" height="35">
 							</div>
-							<div class="how-it-works__heading">CatShib Inu Ecosystem</div>
+							<div class="how-it-works__heading">CatShiba Inu Ecosystem</div>
 							<span class="how-it-works__subtitle">
-								Large variety of options to use CatShib Inu tokens and NFTs
+								Large variety of options to use CatShiba Inu tokens and NFTs
 							</span>
 							<div class="how-it-works__text">
 								<p>
@@ -323,7 +323,7 @@
 									<div class="why__heading">Massive trend</div>
 									<div class="why__text">
 										<p>
-											Shiba inu has invaded the market with an infinity of other meme coins that collect thousands of
+											CatShiba inu has invaded the market with an infinity of other meme coins that collect thousands of
 											ETH and after the launch they make mind-boggling numbers!
 										</p>
 									</div>
@@ -604,7 +604,7 @@
 					<div data-spollers class="questions__spollers spollers">
 						<div class="spollers__item">
 							<button type="button" data-spoller class="spollers__title">
-								<span> What is CatShib Inu?</span>
+								<span> What is CatShiba Inu?</span>
 								<div class="questions__arrow">
 									<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M18 9L12 15L6 9" stroke="#fff" />
@@ -613,7 +613,7 @@
 							</button>
 							<div class="spollers__body">
 								
-CatShib Inu is a meme-inspired cryptocurrency token that combines the playful charm of a cat and the popularity of Shiba Inu. It aims to build a strong community and utility through DeFi, NFTs, and future staking or GameFi features.
+CatShiba Inu is a meme-inspired cryptocurrency token that combines the playful charm of a cat and the popularity of Shiba Inu. It aims to build a strong community and utility through DeFi, NFTs, and future staking or GameFi features.
 							</div>
 						</div>
 						<div class="spollers__item">
@@ -626,12 +626,12 @@ CatShib Inu is a meme-inspired cryptocurrency token that combines the playful ch
 								</div>
 							</button>
 							<div class="spollers__body">
-								CatShib Inu is typically built on BASE network. Always verify the official smart contract address before purchasing.
+								CatShiba Inu is typically built on BASE network. Always verify the official smart contract address before purchasing.
 							</div>
 						</div>
 						<div class="spollers__item">
 							<button type="button" data-spoller class="spollers__title">
-								<span>How can I buy CatShib Inu tokens?</span>
+								<span>How can I buy CatShiba Inu tokens?</span>
 								<div class="questions__arrow">
 									<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M18 9L12 15L6 9" stroke="#fff" />
@@ -639,12 +639,12 @@ CatShib Inu is a meme-inspired cryptocurrency token that combines the playful ch
 								</div>
 							</button>
 							<div class="spollers__body">
-								You can buy CatShib Inu through decentralized exchanges (DEX) Uniswap (Base) by swapping ETH using the correct contract address.
+								You can buy CatShiba Inu through decentralized exchanges (DEX) Uniswap (Base) by swapping ETH using the correct contract address.
 							</div>
 						</div>
 						<div class="spollers__item">
 							<button type="button" data-spoller class="spollers__title">
-								<span>Is CatShib Inu a safe investment?</span>
+								<span>Is CatShiba Inu a safe investment?</span>
 								<div class="questions__arrow">
 									<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M18 9L12 15L6 9" stroke="#fff" />
@@ -652,7 +652,7 @@ CatShib Inu is a meme-inspired cryptocurrency token that combines the playful ch
 								</div>
 							</button>
 							<div class="spollers__body">
-								As with any new meme token, CatShib Inu carries high risk. Make sure to verify the project, team, audits, and community before investing. Only invest what you can afford to lose.
+								As with any new meme token, CatShiba Inu carries high risk. Make sure to verify the project, team, audits, and community before investing. Only invest what you can afford to lose.
 							</div>
 						</div>
 					</div>
@@ -662,7 +662,7 @@ CatShib Inu is a meme-inspired cryptocurrency token that combines the playful ch
 
 			<section class="community wow animate__fadeInUp" id="community">
 				<div class="community__container">
-					<h4 class="community__title title">Join our CatShib Inu Community</h4>
+					<h4 class="community__title title">Join our CatShiba Inu Community</h4>
 					<ul class="community__list">
 						<li class="community__item">
 							<a class="community__link" href="https://t.me/+VxG7HuY-VeA4ZTY1" target="_blank">
