--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 								<div class="token__heading">19% on marketing</div>
 								<div class="token__text">
 									<p>
-										Thanks to our ecosystem you will be able to earn passively and actively
+										This portion is allocated to support CatShiba Inu growth through branding, outreach, and strong community engagement. 
 									</p>
 								</div>
 							</div>
@@ -547,7 +547,7 @@
 								<div class="token__heading">5% for founders, 6% stacked</div>
 								<div class="token__text">
 									<p>
-										Thanks to our ecosystem you will be able to earn passively and actively
+										The Founders Allocation is dedicated to the core team behind CatShiba Inu—those who created the vision, built the foundation, and launched the project. This allocation is subject to a vesting schedule to ensure long-term commitment and alignment with the project's future.
 									</p>
 								</div>
 							</div>
@@ -556,7 +556,7 @@
 								<div class="token__heading">30% for liquidity</div>
 								<div class="token__text">
 									<p>
-										Thanks to our ecosystem you will be able to earn passively and actively
+										The Liquidity Allocation ensures there is enough token supply available on decentralized exchanges (DEX) for smooth and stable trading. This allocation helps minimize slippage and maintain healthy market depth.
 									</p>
 								</div>
 							</div>
@@ -570,7 +570,7 @@
 								<div class="token__heading">10% for advisors</div>
 								<div class="token__text">
 									<p>
-										Thanks to our ecosystem you will be able to earn passively and actively
+										The Advisors Allocation is designated for strategic partners, industry experts, and consultants who provide guidance on project development, marketing strategy, token utility, and partnerships. To ensure commitment and prevent market pressure, this allocation is typically vested.
 									</p>
 								</div>
 							</div>
@@ -579,7 +579,7 @@
 								<div class="token__heading">P2e 15%</div>
 								<div class="token__text">
 									<p>
-										Thanks to our ecosystem you will be able to earn passively and actively
+										The P2E Allocation is reserved to reward players who participate in the upcoming CatShiba Inu game. This encourages community engagement and helps build a sustainable in-game economy.
 									</p>
 								</div>
 							</div>
@@ -588,7 +588,7 @@
 								<div class="token__heading">NFT 15%</div>
 								<div class="token__text">
 									<p>
-										Thanks to our ecosystem you will be able to earn passively and actively
+										The NFT Allocation is set aside to support the development, distribution, and ecosystem growth of CatShiba Inu NFTs. These NFTs will play a key role in community identity, game integration, and long-term utility.
 									</p>
 								</div>
 							</div>
