--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 							<div class="how-it-works__text">
 								<p>
 									Our ecosystem is different from all the others, we have created the first REAL nft game with
-									CatShib Inu.
+									CatShiba Inu.
 								</p>
 								<p>
 									So the tokens will have real usefulness and to ensure constant growth for all holders.
@@ -618,7 +618,7 @@ CatShiba Inu is a meme-inspired cryptocurrency token that combines the playful c
 						</div>
 						<div class="spollers__item">
 							<button type="button" data-spoller class="spollers__title">
-								<span>On which blockchain is CatShib Inu built?</span>
+								<span>On which blockchain is CatShiba Inu built?</span>
 								<div class="questions__arrow">
 									<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M18 9L12 15L6 9" stroke="#fff" />
