--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 								</ul>
 							</nav>
 						</div>
-						<a class="header__link btn" data-popup="#popup" href="#" data-da=".header__nav, 576,2">Join Community</a>
+						<a class="header__link btn" href="https://app.uniswap.org/swap?outputCurrency=0x3edEcE6de2F75F0735731d4171468c2c41103687&chain=base" data-da=".header__nav, 576,2" target=_"blank">Buy CSHIBA</a>
 						<button class="icon-menu" type="button" title="burger menu button">
 							<span></span>
 						</button>
