--- a/index.html
+++ b/index.html
@@ -109,9 +109,8 @@
 							</div>
 							<div class="header__action" data-da=".header__content, 1300">
 								<div class="header__buttons">
-									<button class="header__button btn" link" href="#" data-goto="#community">Join Community</button>
-									<button class="header__button btn btn_tr" data-popup="#popup" type="button" title="contact button">More about CatShiba
-										Inu</button>
+									<a class="header__button btn" href="https://dexscreener.com/base/0x9479eb98d0229388291538abfe7b644956bff860" target=_"blank">View $CSHIBA Chart</a>
+                  <a class="header__button btn" href="https://app.uniswap.org/swap?outputCurrency=0x3edEcE6de2F75F0735731d4171468c2c41103687&chain=base" target=_"blank">Buy $CSHIBA</a>
 								</div>
 								<div class="header__address">
 									<span>Contract address:</span>
