--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 					<div class="shiba__text">
 						<p>Yes you read that right, CatShiba Inu officially enters the game to conquer the world 🌎</p>
 					</div>
-					<a class="shiba__link btn" data-popup="#popup" href="#">Let’s find out more</a>
+					<a class="menu__link link" href="#" data-goto="#why">Let’s find out more</a>
 					<!-- <picture><source srcset="img/shiba/bg.webp" type="image/webp"><img src="img/shiba/bg.png" alt="Shiba image" width="950" height="950"></picture> -->
 
 				</div>
