--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 					<div class="shiba__text">
 						<p>Yes you read that right, CatShiba Inu officially enters the game to conquer the world 🌎</p>
 					</div>
-					<a class="menu__link link" href="#" data-goto="#why">Let’s find out more</a>
+					<a class="shiba__link btn"  href="#" data-goto="#token">Let’s find out more</a>
 					<!-- <picture><source srcset="img/shiba/bg.webp" type="image/webp"><img src="img/shiba/bg.png" alt="Shiba image" width="950" height="950"></picture> -->
 
 				</div>
@@ -311,7 +311,7 @@
 								in case you have lived in a cave in the last few months we will give you a brief summary of what
 								happened in crypto industry
 							</div>
-							<a class="why__link btn" data-popup="#popup" href="#">Learn more about CatShiba</a>
+							<a class="why__link btn" href="#" data-goto="#community">join community CatShiba</a>
 						</div>
 						<div class="why__item">
 							<div class="why__row">
