--- a/index.html
+++ b/index.html
@@ -308,10 +308,10 @@
 						<div class="why__item">
 							<h3 class="why__title title">Why invest in CatShiba Inu?</h3>
 							<div class="why__subtitle">
-								in case you have lived in a cave in the last few months we will give you a brief summary of what
+								In case you have lived in a cave in the last few months we will give you a brief summary of what
 								happened in crypto industry
 							</div>
-							<a class="why__link btn" href="#" data-goto="#community">join community CatShiba</a>
+							<a class="why__link btn" href="#" data-goto="#community">Join Community CatShiba</a>
 						</div>
 						<div class="why__item">
 							<div class="why__row">
