--- a/index-v2.html
+++ b/index-v2.html
@@ -558,7 +558,7 @@
 						<div class="token__item token__item_left">
 							<div class="token__info">
 								<span class="token__line token__line_1"></span>
-								<div class="token__heading">19% on marketing</div>
+								<div class="token__heading">1% on marketing</div>
 								<div class="token__text">
 									<p>
 										Thanks to our ecosystem you will be able to earn passively and actively
@@ -570,7 +570,7 @@
 									<span class="token__line token__line_2"></span>
 									<span class="token__line token__line_3"></span>
 								</div>
-								<div class="token__heading">5% for founders, 6% stacked</div>
+								<div class="token__heading">2% for founders</div>
 								<div class="token__text">
 									<p>
 										Thanks to our ecosystem you will be able to earn passively and actively
@@ -579,7 +579,7 @@
 							</div>
 							<div class="token__info">
 								<span class="token__line token__line_4"></span>
-								<div class="token__heading">30% for liquidity</div>
+								<div class="token__heading">95% for liquidity</div>
 								<div class="token__text">
 									<p>
 										Thanks to our ecosystem you will be able to earn passively and actively
@@ -593,7 +593,7 @@
 						<div class="token__item token__item_right">
 							<div class="token__info">
 								<span class="token__line token__line_5"></span>
-								<div class="token__heading">10% for advisors</div>
+								<div class="token__heading">1% for advisors</div>
 								<div class="token__text">
 									<p>
 										Thanks to our ecosystem you will be able to earn passively and actively
@@ -602,7 +602,7 @@
 							</div>
 							<div class="token__info">
 								<span class="token__line token__line_6"></span>
-								<div class="token__heading">P2e 15%</div>
+								<div class="token__heading">P2e 0,5%</div>
 								<div class="token__text">
 									<p>
 										Thanks to our ecosystem you will be able to earn passively and actively
@@ -611,7 +611,7 @@
 							</div>
 							<div class="token__info">
 								<span class="token__line token__line_7"></span>
-								<div class="token__heading">NFT 15%</div>
+								<div class="token__heading">NFT 0,5%</div>
 								<div class="token__text">
 									<p>
 										Thanks to our ecosystem you will be able to earn passively and actively
