--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 						<div class="token__item token__item_left">
 							<div class="token__info">
 								<span class="token__line token__line_1"></span>
-								<div class="token__heading">19% on marketing</div>
+								<div class="token__heading">1% on marketing</div>
 								<div class="token__text">
 									<p>
 										This portion is allocated to support CatShiba Inu growth through branding, outreach, and strong community engagement. 
@@ -543,7 +543,7 @@
 									<span class="token__line token__line_2"></span>
 									<span class="token__line token__line_3"></span>
 								</div>
-								<div class="token__heading">5% for founders, 6% stacked</div>
+								<div class="token__heading">2% for founders</div>
 								<div class="token__text">
 									<p>
 										The Founders Allocation is dedicated to the core team behind CatShiba Inu—those who created the vision, built the foundation, and launched the project. This allocation is subject to a vesting schedule to ensure long-term commitment and alignment with the project's future.
@@ -552,7 +552,7 @@
 							</div>
 							<div class="token__info">
 								<span class="token__line token__line_4"></span>
-								<div class="token__heading">30% for liquidity</div>
+								<div class="token__heading">95% for liquidity</div>
 								<div class="token__text">
 									<p>
 										The Liquidity Allocation ensures there is enough token supply available on decentralized exchanges (DEX) for smooth and stable trading. This allocation helps minimize slippage and maintain healthy market depth.
@@ -566,7 +566,7 @@
 						<div class="token__item token__item_right">
 							<div class="token__info">
 								<span class="token__line token__line_5"></span>
-								<div class="token__heading">10% for advisors</div>
+								<div class="token__heading">1% for advisors</div>
 								<div class="token__text">
 									<p>
 										The Advisors Allocation is designated for strategic partners, industry experts, and consultants who provide guidance on project development, marketing strategy, token utility, and partnerships. To ensure commitment and prevent market pressure, this allocation is typically vested.
@@ -575,7 +575,7 @@
 							</div>
 							<div class="token__info">
 								<span class="token__line token__line_6"></span>
-								<div class="token__heading">P2e 15%</div>
+								<div class="token__heading">P2e 0,5%</div>
 								<div class="token__text">
 									<p>
 										The P2E Allocation is reserved to reward players who participate in the upcoming CatShiba Inu game. This encourages community engagement and helps build a sustainable in-game economy.
@@ -584,7 +584,7 @@
 							</div>
 							<div class="token__info">
 								<span class="token__line token__line_7"></span>
-								<div class="token__heading">NFT 15%</div>
+								<div class="token__heading">NFT 0,5%</div>
 								<div class="token__text">
 									<p>
 										The NFT Allocation is set aside to support the development, distribution, and ecosystem growth of CatShiba Inu NFTs. These NFTs will play a key role in community identity, game integration, and long-term utility.
