--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							</div>
 							<div class="header__action" data-da=".header__content, 1300">
 								<div class="header__buttons">
-									<a class="header__button btn" href="https://dexscreener.com/base/0x9479eb98d0229388291538abfe7b644956bff860" target=_"blank">View $CSHIBA Chart</a>
+									<a class="header__button btn" href="#" data-goto="#chart">View $CSHIBA Chart</a>
                   <a class="header__button btn" href="https://app.uniswap.org/swap?outputCurrency=0x3edEcE6de2F75F0735731d4171468c2c41103687&chain=base" target=_"blank">Buy $CSHIBA</a>
 								</div>
 								<div class="header__address">
@@ -658,6 +658,15 @@ CatShiba Inu is a meme-inspired cryptocurrency token that combines the playful c
 
 				</div>
 			</section>
+			<section class="community wow animate__fadeInUp" id="chart">
+        <div class="chart__container">
+          <h4 class="chart__title title">$CSHIBA Live Chart</h4>
+          <h5 class="chart__title title">Real-time price and trading data on Base Chain</h5>&nbsp;
+
+          <style>#dexscreener-embed{position:relative;width:100%;padding-bottom:125%;}@media(min-width:1280px){#dexscreener-embed{padding-bottom:65%;}}#dexscreener-embed iframe{position:absolute;width:100%;height:100%;top:0;left:0;border:0;}</style><div id="dexscreener-embed"><iframe src="https://dexscreener.com/base/0x9479eb98D0229388291538ABFE7b644956BFf860?embed=1&loadChartSettings=0&chartLeftToolbar=0&chartDefaultOnMobile=1&chartTheme=dark&theme=dark&chartStyle=0&chartType=usd&interval=15"></iframe></div>
+
+          </div>
+      </section>
 
 			<section class="community wow animate__fadeInUp" id="community">
 				<div class="community__container">
