--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							</div>
 							<div class="header__action" data-da=".header__content, 1300">
 								<div class="header__buttons">
-			<center><a class="header__button btn" href="#" data-goto="#chart">View $CSHIBA Chart</a>
+		<center><a class="header__button btn" href="#" data-goto="#chart">View $CSHIBA Chart</a></center> <center>
 <a class="header__button btn" href="https://app.uniswap.org/swap?outputCurrency=0x3edEcE6de2F75F0735731d4171468c2c41103687&chain=base" target="_blank">Buy $CSHIBA</a></center>
 								</div>
 								<div class="header__address">
