--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 								In case you have lived in a cave in the last few months we will give you a brief summary of what
 								happened in crypto industry
 							</div>
-							<a class="why__link btn" href="#" data-goto="#community">Join Community CatShiba</a>
+							<center><a class="header__button btn" href="#" data-goto="#chart">Join Community Catshiba</a></center>
 						</div>
 						<div class="why__item">
 							<div class="why__row">
