--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 							<div class="header__action" data-da=".header__content, 1300">
 								<div class="header__buttons">
 		<center><a class="header__button btn" href="#" data-goto="#chart">View $CSHIBA Chart</a></center> <center>
-<a class="header__button btn" href="https://app.uniswap.org/swap?outputCurrency=0x3edEcE6de2F75F0735731d4171468c2c41103687&chain=base" target="_blank">Buy $CSHIBA</a></center>
+<a class="header__button btn" href="https://app.uniswap.org/swap?outputCurrency=0x3edEcE6de2F75F0735731d4171468c2c41103687&chain=base" target="_blank">Buy $CSHIBA</a></center>&nbsp
 								</div>
 								<div class="header__address">
 									<span>Contract address:</span>
@@ -311,7 +311,7 @@
 								In case you have lived in a cave in the last few months we will give you a brief summary of what
 								happened in crypto industry
 							</div>
-							<center><a class="header__button btn" href="#" data-goto="#chart">Join Community Catshiba</a></center>
+							<center><a class="header__button btn" href="#" data-goto="#chart">Join Community Catshiba</a></center>&nbsp
 						</div>
 						<div class="why__item">
 							<div class="why__row">
