--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@ CatShiba Inu is a meme-inspired cryptocurrency token that combines the playful c
           <h4 class="chart__title title">$CSHIBA Live Chart</h4>
           <h5 class="chart__title title">Real-time price and trading data on Base Chain</h5>&nbsp;
 
-          <style>#dexscreener-embed{position:relative;width:100%;padding-bottom:125%;}@media(min-width:1280px){#dexscreener-embed{padding-bottom:65%;}}#dexscreener-embed iframe{position:absolute;width:100%;height:100%;top:0;left:0;border:0;}</style><div id="dexscreener-embed"><iframe src="https://dexscreener.com/base/0x9479eb98D0229388291538ABFE7b644956BFf860?embed=1&loadChartSettings=0&chartLeftToolbar=0&chartDefaultOnMobile=1&chartTheme=dark&theme=dark&chartStyle=0&chartType=usd&interval=15"></iframe></div>
+          <style>#dexscreener-embed{position:relative;width:100%;padding-bottom:125%;}@media(min-width:1400px){#dexscreener-embed{padding-bottom:65%;}}#dexscreener-embed iframe{position:absolute;width:100%;height:100%;top:0;left:0;border:0;}</style><div id="dexscreener-embed"><iframe src="https://dexscreener.com/base/0x9479eb98D0229388291538ABFE7b644956BFf860?embed=1&loadChartSettings=0&chartLeftToolbar=0&chartTheme=dark&theme=dark&chartStyle=0&chartType=usd&interval=15"></iframe></div>
 
           </div>
       </section>
