--- a/index.html
+++ b/index.html
@@ -2,32 +2,17 @@
 <html lang="en">
 
 <head>
-  <title>CatShiba Inu ($CSHIBA) – The Ultimate Fusion of Cats, Memes, and Crypto</title>
-  <meta name="description" content="CatShiba Inu ($CSHIBA) is the purr-fect meme coin fusion of cats and Shiba Inu – powered by community, fun, and the spirit of decentralized finance. Join the movement today!">
-
-  <!-- Basic Meta -->
+  <title>CatShiba Inu</title>
   <meta charset="UTF-8">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="description" content="some content">
+  <!-- <meta http-equiv="X-UA-Compatible" content="IE=7"> -->
+  <meta content="ie=edge" http-equiv="X-UA-Compatible">
+  <meta name="keywords" content="test">
+  <!-- <style>body{opacity: 0;}</style> -->
+  <link rel="stylesheet" href="css/style.min.css?_v=20230210092917">
+  <!-- <meta name="robots" content="noindex, nofollow"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://catshibainu.com/">
-  <meta property="og:title" content="CatShiba Inu ($CSHIBA) – Cat Meme Crypto Revolution">
-  <meta property="og:description" content="CatShiba Inu combines the charm of cats with the legendary Shiba spirit. Buy $CSHIBA now and ride the cutest wave in crypto.">
-  <meta property="og:image" content="https://catshibainu.com/img/og-image.jpg">
-
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://x.com/CatshibaBase">
-  <meta name="twitter:title" content="CatShiba Inu ($CSHIBA) – Meme Coin with Nine Lives">
-  <meta name="twitter:description" content="The $CSHIBA token is your ticket to the most adorable and powerful meme coin community. Cats, memes, and moonshots!">
-  <meta name="twitter:image" content="https://catshibainu.com/img/twitter-card.jpg">
-
-  <!-- Favicon -->
-  <link rel="icon" href="https://catshibainu.com/img/favicon.ico" type="image/x-icon">
-
-  <!-- Canonical -->
-  <link rel="canonical" href="https://catshibainu.com/">
 </head>
 
 <body>
