--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
   <title>CatShiba Inu</title>
   <meta charset="UTF-8">
   <meta name="format-detection" content="telephone=no">
-  <meta name="description" content="some content">
+  <meta name="description" content="CatShiba ($CATSHIBA) is a community-driven meme coin that combines the charm of cats and the legendary energy of Shiba Inu. Built on a strong and loyal community, CatShiba aims to bring fun, utility, and innovation to the crypto space — one paw at a time.">
   <!-- <meta http-equiv="X-UA-Compatible" content="IE=7"> -->
   <meta content="ie=edge" http-equiv="X-UA-Compatible">
-  <meta name="keywords" content="test">
+  <meta name="keywords" content="CatShiba, CatShiba token, CatShiba coin, $CATSHIBA, CatShiba crypto, meme coin 2025, new meme coin, best meme token, Shiba cat coin, trending crypto project, community meme token, cat-themed cryptocurrency, Shiba Inu alternative, DeFi meme coin, crypto for cat lovers, top meme coins, next 100x crypto, crypto with NFTs, meme coin with utility, ERC20 meme coin, meow to the moon, next Doge killer, meme revolution, paw-powered token, meme coin explosion, cat + shiba = chaos, #CatShibaArmy, $CATSHIBA to the moon, viral meme coin, cutest crypto alive, how to buy CatShiba token, is CatShiba a good investment?, CatShiba crypto price prediction, CatShiba vs Dogecoin, where to buy $CATSHIBA, future of meme coins 2025, cat coins in crypto market, meme coin with real use case">
+	<!-- Favicon -->
+  <link rel="icon" href="https://catshibainu.com/img/favicon.ico" type="image/x-icon">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://cshiba.com/">
   <!-- <style>body{opacity: 0;}</style> -->
   <link rel="stylesheet" href="css/style.min.css?_v=20230210092917">
   <!-- <meta name="robots" content="noindex, nofollow"> -->
