--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="ie=edge" http-equiv="X-UA-Compatible">
   <meta name="keywords" content="CatShiba, CatShiba token, CatShiba coin, $CATSHIBA, CatShiba crypto, meme coin 2025, new meme coin, best meme token, Shiba cat coin, trending crypto project, community meme token, cat-themed cryptocurrency, Shiba Inu alternative, DeFi meme coin, crypto for cat lovers, top meme coins, next 100x crypto, crypto with NFTs, meme coin with utility, ERC20 meme coin, meow to the moon, next Doge killer, meme revolution, paw-powered token, meme coin explosion, cat + shiba = chaos, #CatShibaArmy, $CATSHIBA to the moon, viral meme coin, cutest crypto alive, how to buy CatShiba token, is CatShiba a good investment?, CatShiba crypto price prediction, CatShiba vs Dogecoin, where to buy $CATSHIBA, future of meme coins 2025, cat coins in crypto market, meme coin with real use case">
 	<!-- Favicon -->
-  <link rel="icon" href="https://catshibainu.com/img/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="https://cshiba.com/img/favicon.ico" type="image/x-icon">
 
   <!-- Canonical -->
   <link rel="canonical" href="https://cshiba.com/">
