--- a/index.html
+++ b/index.html
@@ -742,6 +742,17 @@ CatShiba Inu is a meme-inspired cryptocurrency token that combines the playful c
 	</div>
 
 	<script defer src="js/app.min.js?_v=20230210092917"></script>
+	<!-- Histats.com  START  (aync)-->
+<script type="text/javascript">var _Hasync= _Hasync|| [];
+_Hasync.push(['Histats.start', '1,4962970,4,0,0,0,00010000']);
+_Hasync.push(['Histats.fasi', '1']);
+_Hasync.push(['Histats.track_hits', '']);
+(function() {
+var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+hs.src = ('//s10.histats.com/js15_as.js');
+(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+})();</script>
+<!-- Histats.com  END  -->
 </body>
 
 </html>
