--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 										<a class="menu__link link" href="#" data-goto="#how">How it works</a>
 									</li>
 									<li class="menu__item">
-										<a class="menu__link link" href="#" data-goto="#play">Play and earn</a>
+										<a class="menu__link link" href="https://bankr.bot/terminal?refCode=N3Y5G27K-BNKR" target="_blank">
 									</li>
 									<li class="menu__item">
 										<a class="menu__link link" href="#" data-goto="#roadmap">Roadmap</a>
