--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 							<div class="header__action" data-da=".header__content, 1300">
 								<div class="header__buttons">
 		<center><a class="header__button btn" href="#" data-goto="#chart">View $CSHIBA Chart</a></center>&nbsp <center>&nbsp
-<a class="header__button btn" href="https://app.uniswap.org/swap?outputCurrency=0x3edEcE6de2F75F0735731d4171468c2c41103687&chain=base" target="_blank">Buy $CSHIBA</a></center>&nbsp
+<a class="header__button btn" href="https://pump.fun/coin/7h64frNaksbp7oLZoaWAzmZ7xuj4pJFdd7ujLn4mpump" target="_blank">Buy $CSHIBA</a></center>&nbsp
 								</div>
 								<div class="header__address">
 									<span>Contract address:</span>
@@ -757,6 +757,7 @@ hs.src = ('//s10.histats.com/js15_as.js');
 </body>
 
 </html>
+
 
 
 
